--- a/07.13/index.html
+++ b/07.13/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="mobile.css">
 </head>
 <body> 
-	<!-- 인트로 -->
+	<!-- Intro -->
 	<header id="intro">
 		<div class="introWrap">
 			<div class="logo"></div>
@@ -28,7 +28,7 @@
 		</div> 
 	</header>
 
-	<!-- 농부 -->
+	<!-- Farmer -->
 	<div id="farm1">
 		<div class="leftRice1"></div>
 		<div class="farmer"></div>
@@ -46,14 +46,14 @@
 		</div>
 	</div>
 
-	<!-- 허수아비 -->
+	<!-- Scarecrow -->
 	<div id="farm2">
 		<div class="leftRice2"></div>
 		<div class="scarecrow"></div>
 		<div class="rightRice2"></div>
 	</div>
 
-	<!-- 기계 -->
+	<!-- Machine -->
 	<div id="farm3"> 
 		<div class="farm3Window"></div>
 		<div class="machineWrap">
@@ -65,6 +65,77 @@
 			<div class="timer"></div>
 		</div> 
 		<img class="farm3Bubble" src="img/farm/farm3/farm3bubble.png" alt="기계를 통해서 쌀알이 딱딱한 껍질을 벗어 냅니다."> 
+	</div>
+	
+	
+	<!-- Forest -->
+	<div id="forest1">
+		<div class="leftTree"></div> 
+		<div class="treeWrap">
+			<div class="rabbit1"></div>
+			<div class="rabbit2"></div>
+			<div class="rightTree"></div>
+		</div> 
+	</div>
+
+	<!-- Forest2 -->
+	<div id="forest2">
+		<div class="frog"></div>
+		<div class="machineWrap2">
+			<div class="machineBottom"></div>
+			<div class="machineLeft"></div>
+			<div class="machineRight"></div>
+		</div> 
+		<img class="forestBubble" src="img/forest/forest2/forestbubble.png" alt="기계를 통해서 쌀을 고운 가루로 만든답니다.">
+		<div class="forest2Tree"></div>
+	</div>
+
+	<!-- Forest3 -->
+	<div id="forest3">
+		<div class="forest3Wrap">
+			<div class="forest3Tree"></div>
+			<div class="smallBird"></div>
+			<div class="bigBird"></div>
+		</div>
+	</div>
+
+	<!-- science -->
+	<div id="science">
+		<div class="scienceWrap">
+			<div class="scienceLeftWrap">
+				<div class="gly"></div>
+				<img src="img/science/leftTitle.png" alt="자초, 어성초, 감초">
+				<p>
+					자초 어성초 감초를 넣어서<br>
+					피부진정 및 항염 효과가 있답니다.
+				</p>
+			</div>
+			<div class="scienceCenterWrap">
+				<div class="purpleSteam"></div>
+				<div class="funnelBack"></div>
+				<div class="funnelFront"></div>
+			</div>
+			<div class="scienceRightWrap">
+				<div class="water"></div>
+				<img src="img/science/rightTitle.png" alt="글리세린, 올리브유">
+				<p>
+					빵의 표면을 촉촉하게 해주는<br>
+					글리세린과 오메가-9 지방산이<br>
+					풍부한 올리브유를 넣어서<br>
+					보습 효과도 뛰어나답니다.
+				</p>
+			</div>
+		</div>
+	</div>
+
+	<!-- Night -->
+	<div id="night1">
+		<div class="owl"></div>
+		<div class="starWrap">
+			<div class="star1"></div>
+			<div class="star2"></div>
+			<div class="star3"></div>
+		</div>
 	</div>
 </body>
 </html>
