--- a/07.13/index.html
+++ b/07.13/index.html
@@ -137,5 +137,62 @@
 			<div class="star3"></div>
 		</div>
 	</div>
+        
+	
+	<!-- Night2 -->
+	<div id="night2">
+		<div class="moon"></div>
+		<img class="night2Bubble" src="img/oneday/night2/night2bubble.png" alt="하루동안 숙성을 시키게 됩니다.">
+		 <div class="rightMoonTree"></div>
+	</div>
+
+	<!-- Morning -->
+	<div id="morning">
+		<div class="sun"></div>
+		<div class="leftPine"></div>
+		<div class="rightPine"></div>
+	</div>
+
+	<!-- kitchen -->
+	<div id="kitchen">
+		<div class="leftPan"></div>
+		<div class="rightPan"></div>
+		<div class="steamWrap">
+			<div class="steam"></div>
+			<div class="bubble1"></div>
+		</div>
+		<img class="kitchenBubble" src="img/kitchen/kitchenbubble.png" alt="숙성을 시킨 반죽을 잘 익혀주면">
+	</div>
+
+	<!-- color1 -->
+	<div id="color1">
+		<div class="penguin"></div>
+		<img class="color1Bubble" src="img/color/color1/color1bubble.png" alt="말랑말랑 키즈가오 완성">
+	</div>	
+
+	<!-- color2 -->
+	<div id="color2">
+		<div class="horse"></div>
+		<div class="color2wrap">
+			<img class="color2Bubble" src="img/color/color2/color2bubble.png" alt="색상을 선택해 보세요">
+			<div class="btn-wrap">
+				<button type="button" class="red"></button>
+				<button type="button" class="yellow"></button>
+				<button type="button" class="blue"></button>
+			</div>
+			<p class="color2Comment">
+				아이가 원하는 색상을 직접 만들며 색감을 스스로 발달시킵니다.<br>
+				색이 잘 섞이므로 누구나 쉽게 다양한 색을 만들 수 있습니다.
+			</p>
+		</div>
+	</div>
+
+	<!-- color3 -->
+	<div id="color3">
+		<div class="flag"></div>
+		<div class="book"></div>
+		<img class="logo" src="img/color/color3/logo.png" alt="키즈가오 회사 로고">
+		<div class="dice"></div>
+	</div>
 </body>
 </html>
