--- a/07.19/naver/index.html
+++ b/07.19/naver/index.html
@@ -331,10 +331,210 @@
 					</div>
 				</div>
 			</div>
-			<div id="main_right">
-				
-			</div>
-		</main>
-	</header>
+			 <!-- main_right -->
+            <div id="main_right">
+                <div id="account">
+                    <p>네이버를 더 안전하고 편안하게 이용하세요.</p>
+                    <a href="#">NAVER 로그인</a>
+                    <div class="account_sub">
+                        <div class="account_sub_left">
+                            <span>아이디</span>
+                            <span>비밀번호 찾기</span>
+                        </div>
+                        <span>회원가입</span>
+                    </div>
+                </div>
+                <div id="main_right_banner"></div>
+                <div id="shop_wrap">
+                    <div class="shop_title">
+                        <h3><a href="#">트랜드 쇼핑</a></h3>
+                        <div class="shop_title_right">
+                            <h4><a href="#">상품</a></h4>
+                            <h4><a href="#">쇼핑몰</a></h4>
+                            <h4><a href="#">MEN</a></h4>
+                        </div>
+                    </div>
+                    <div class="shop_content">
+                        <ul class="commerce_list">
+                            <li><a href="#">G마켓</a></li>
+                            <li><a href="#">옥션</a></li>
+                            <li><a href="#">11번가</a></li>
+                            <li><a href="#">G마켓</a></li>
+                            <li><a href="#">옥션</a></li>
+                            <li><a href="#">11번가</a></li>
+                            <li><a href="#">G마켓</a></li>
+                            <li><a href="#">옥션</a></li>
+                            <li><a href="#">G마켓</a></li>
+                            <li><a href="#">옥션</a></li>
+                            <li><a href="#">11번가</a></li>
+                            <li><a href="#">G마켓</a></li>
+                            <li><a href="#">옥션</a></li>
+                            <li><a href="#">11번가</a></li>
+                            <li><a href="#">G마켓</a></li>
+                            <li><a href="#">옥션</a></li>
+                        </ul>
+                        <div class="shop_goods">
+                            <ul class="product_list">
+                                <li>
+                                    <a href="#">
+                                        <img src="https://via.placeholder.com/107x146">
+                                        <div class="product_info">
+                                            <h3>퀄리티가 중요한</h3>
+                                            <span>당신을 위한 룩</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://via.placeholder.com/107x146">
+                                        <div class="product_info">
+                                            <h3>퀄리티가 중요한</h3>
+                                            <span>당신을 위한 룩</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://via.placeholder.com/107x146">
+                                        <div class="product_info">
+                                            <h3>퀄리티가 중요한</h3>
+                                            <span>당신을 위한 룩</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://via.placeholder.com/107x146">
+                                        <div class="product_info">
+                                            <h3>퀄리티가 중요한</h3>
+                                            <span>당신을 위한 룩</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://via.placeholder.com/107x146">
+                                        <div class="product_info">
+                                            <h3>퀄리티가 중요한</h3>
+                                            <span>당신을 위한 룩</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://via.placeholder.com/107x146">
+                                        <div class="product_info">
+                                            <h3>퀄리티가 중요한</h3>
+                                            <span>당신을 위한 룩</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://via.placeholder.com/107x146">
+                                        <div class="product_info">
+                                            <h3>퀄리티가 중요한</h3>
+                                            <span>당신을 위한 룩</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://via.placeholder.com/107x146">
+                                        <div class="product_info">
+                                            <h3>퀄리티가 중요한</h3>
+                                            <span>당신을 위한 룩</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://via.placeholder.com/107x146">
+                                        <div class="product_info">
+                                            <h3>퀄리티가 중요한</h3>
+                                            <span>당신을 위한 룩</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://via.placeholder.com/107x146">
+                                        <div class="product_info">
+                                            <h3>퀄리티가 중요한</h3>
+                                            <span>당신을 위한 룩</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://via.placeholder.com/107x146">
+                                        <div class="product_info">
+                                            <h3>퀄리티가 중요한</h3>
+                                            <span>당신을 위한 룩</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://via.placeholder.com/107x146">
+                                        <div class="product_info">
+                                            <h3>퀄리티가 중요한</h3>
+                                            <span>당신을 위한 룩</span>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </header>
+    <!-- footer -->
+    <footer id="main_footer">
+    	 <div class="container">
+    	 	<ul class="footer_news_list">
+    	 		<li>
+    				<img src="https://via.placeholder.com/160x86">
+    				<div class="footer_news_info">
+    					<span>부스트캠프 2021</span>
+    					<h3>온라인 설명회 신청하기</h3>
+    					<p>SW 개발자를 위한 교육<br>
+    					   지원꿀팁과 생생한 후기들!</p>
+    				</div>
+    			</li>
+    			<li>
+    				<img src="https://via.placeholder.com/160x86">
+    				<div class="footer_news_info">
+    					<span>부스트캠프 2021</span>
+    					<h3>온라인 설명회 신청하기</h3>
+    					<p>SW 개발자를 위한 교육<br>
+    					   지원꿀팁과 생생한 후기들!</p>
+    				</div>
+    			</li>
+    			<li>
+    				<img src="https://via.placeholder.com/160x86">
+    				<div class="footer_news_info">
+    					<span>부스트캠프 2021</span>
+    					<h3>온라인 설명회 신청하기</h3>
+    					<p>SW 개발자를 위한 교육<br>
+    					   지원꿀팁과 생생한 후기들!</p>
+    				</div>
+    			</li>
+    	 	</ul>
+    	 	<ul class="corp_list">
+    			<li><a href="#">회사소개</a></li>
+    			<li><a href="#">인재채용</a></li>
+    			<li><a href="#">제휴제안</a></li>
+    			<li><a href="#">이용약관</a></li>
+    			<li><a href="#">개인정보처리방침</a></li>
+    			<li><a href="#">청소년보호정책</a></li>
+    			<li><a href="#">네이버 정책</a></li>
+    			<li><a href="#">고객센터</a></li>
+    			<li><a href="#">NAVER Corp.</a></li>
+    		</ul>
+    	 </div>
+    </footer>
 </body>
+
 </html>
