--- a/07.19/naver/index.html
+++ b/07.19/naver/index.html
@@ -23,7 +23,7 @@
 					<li><a href="#">카페</a></li>
 					<li><a href="#">블로그</a></li>
 					<li><a href="#">지식IN</a></li>
-					<li><a href="#">쇼핑</a></li>
+					<li><a href="shop.html">쇼핑</a></li>
 				</ul>
 			</div>
 		</div>
