--- a/07.19/naver/shop.html
+++ b/07.19/naver/shop.html
@@ -98,15 +98,372 @@
                         <img src="https://via.placeholder.com/306x494">
                     </div>
                 </div>
-                <div class="list_item"></div>
-                <div class="list_item"></div>
-                <div class="list_item"></div>
-                <div class="list_item"></div>
-                <div class="list_item"></div>
-                <div class="list_item"></div>
+                               <div class="list_item">
+                    <div class="list_half list_half_top shop_border">
+                        <div class="list_half_header list_half_bg">
+                            <div class="half_overlay">
+                                <h3 class="shop_title_border">백화점 상품 그대로</h3>
+                            </div>
+                        </div>
+                        <ul class="content_list content_list_3">
+                            <li>
+                                <img src="https://via.placeholder.com/102x100">
+                                <h3>생활공작소<br>과탄산소다</h3>
+                                <span>1.5kg x 4입</span>
+                            </li>
+                            <li>
+                                <img src="https://via.placeholder.com/102x100">
+                                <h3>생활공작소<br>과탄산소다</h3>
+                                <span>1.5kg x 4입</span>
+                            </li>
+                            <li>
+                                <img src="https://via.placeholder.com/102x100">
+                                <h3>생활공작소<br>과탄산소다</h3>
+                                <span>1.5kg x 4입</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="list_half list_half_bottom shop_border">
+                        <div class="list_half_header">
+                            <span class="headline">hot deal</span>
+                            <h3>백화점 상품 그대로</h3>
+                        </div>
+                        <ul class="content_list content_list_2">
+                            <li>
+                                <div class="content_image_wrap">
+                                    <img src="https://via.placeholder.com/130x90">
+                                    <span class="discount">50%</span>
+                                    <h3>부드럽게 감기는 말랑말랑 파우치 이불</h3>
+                                    <span class="price">
+                                        <em>21,900</em>원
+                                    </span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="content_image_wrap">
+                                    <img src="https://via.placeholder.com/130x90">
+                                    <span class="discount">50%</span>
+                                    <h3>부드럽게 감기는 말랑말랑 파우치 이불</h3>
+                                    <span class="price">
+                                        <em>21,900</em>원
+                                    </span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="list_item">
+                    <div class="list_half list_half_top shop_border">
+                        <div class="list_half_header">
+                            <span class="headline">hot deal</span>
+                            <h3>백화점 상품 그대로</h3>
+                        </div>
+                        <ul class="content_list content_list_2">
+                            <li>
+                                <div class="content_image_wrap">
+                                    <img src="https://via.placeholder.com/130x90">
+                                    <span class="discount">50%</span>
+                                    <h3>부드럽게 감기는 말랑말랑 파우치 이불</h3>
+                                    <span class="price">
+                                        <em>21,900</em>원
+                                    </span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="content_image_wrap">
+                                    <img src="https://via.placeholder.com/130x90">
+                                    <span class="discount">50%</span>
+                                    <h3>부드럽게 감기는 말랑말랑 파우치 이불</h3>
+                                    <span class="price">
+                                        <em>21,900</em>원
+                                    </span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <ul class="list_row_3">
+                        <li>
+                            <div class="list_image_wrap shop_border">
+                                <img src="https://via.placeholder.com/90x60">
+                            </div>
+                            <div class="list_row_info">
+                                <span>멜론티켓</span>
+                                <h3>흥행 돌풍 마마, 돈크라이</h3>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="list_image_wrap shop_border">
+                                <img src="https://via.placeholder.com/90x60">
+                            </div>
+                            <div class="list_row_info">
+                                <span>멜론티켓</span>
+                                <h3>흥행 돌풍 마마, 돈크라이</h3>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="list_image_wrap shop_border">
+                                <img src="https://via.placeholder.com/90x60">
+                            </div>
+                            <div class="list_row_info">
+                                <span>멜론티켓</span>
+                                <h3>흥행 돌풍 마마, 돈크라이</h3>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="list_item">
+                    <div class="list_half list_half_top shop_border">
+                        <div class="list_half_header list_half_bg">
+                            <div class="half_overlay">
+                                <h3 class="shop_title_border">백화점 상품 그대로</h3>
+                            </div>
+                        </div>
+                        <ul class="content_list content_list_3">
+                            <li>
+                                <img src="https://via.placeholder.com/102x100">
+                                <h3>생활공작소<br>과탄산소다</h3>
+                                <span>1.5kg x 4입</span>
+                            </li>
+                            <li>
+                                <img src="https://via.placeholder.com/102x100">
+                                <h3>생활공작소<br>과탄산소다</h3>
+                                <span>1.5kg x 4입</span>
+                            </li>
+                            <li>
+                                <img src="https://via.placeholder.com/102x100">
+                                <h3>생활공작소<br>과탄산소다</h3>
+                                <span>1.5kg x 4입</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="list_half list_half_bottom shop_border">
+                        <div class="list_half_header">
+                            <span class="headline">hot deal</span>
+                            <h3>백화점 상품 그대로</h3>
+                        </div>
+                        <ul class="content_list content_list_2">
+                            <li>
+                                <div class="content_image_wrap">
+                                    <img src="https://via.placeholder.com/130x90">
+                                    <span class="discount">50%</span>
+                                    <h3>부드럽게 감기는 말랑말랑 파우치 이불</h3>
+                                    <span class="price">
+                                        <em>21,900</em>원
+                                    </span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="content_image_wrap">
+                                    <img src="https://via.placeholder.com/130x90">
+                                    <span class="discount">50%</span>
+                                    <h3>부드럽게 감기는 말랑말랑 파우치 이불</h3>
+                                    <span class="price">
+                                        <em>21,900</em>원
+                                    </span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="list_item">
+                    <div class="list_half list_half_top shop_border">
+                        <div class="list_half_header">
+                            <span class="headline">hot deal</span>
+                            <h3>백화점 상품 그대로</h3>
+                        </div>
+                        <ul class="content_list content_list_2">
+                            <li>
+                                <div class="content_image_wrap">
+                                    <img src="https://via.placeholder.com/130x90">
+                                    <span class="discount">50%</span>
+                                    <h3>부드럽게 감기는 말랑말랑 파우치 이불</h3>
+                                    <span class="price">
+                                        <em>21,900</em>원
+                                    </span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="content_image_wrap">
+                                    <img src="https://via.placeholder.com/130x90">
+                                    <span class="discount">50%</span>
+                                    <h3>부드럽게 감기는 말랑말랑 파우치 이불</h3>
+                                    <span class="price">
+                                        <em>21,900</em>원
+                                    </span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="list_half list_half_bottom shop_border">
+                        <div class="list_half_header">
+                            <span class="headline">hot deal</span>
+                            <h3>백화점 상품 그대로</h3>
+                        </div>
+                        <ul class="content_list content_list_2">
+                            <li>
+                                <div class="content_image_wrap">
+                                    <img src="https://via.placeholder.com/130x90">
+                                    <span class="discount">50%</span>
+                                    <h3>부드럽게 감기는 말랑말랑 파우치 이불</h3>
+                                    <span class="price">
+                                        <em>21,900</em>원
+                                    </span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="content_image_wrap">
+                                    <img src="https://via.placeholder.com/130x90">
+                                    <span class="discount">50%</span>
+                                    <h3>부드럽게 감기는 말랑말랑 파우치 이불</h3>
+                                    <span class="price">
+                                        <em>21,900</em>원
+                                    </span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="list_item">
+                    <div class="list_half list_half_top shop_border">
+                        <div class="list_half_header">
+                            <span class="headline">hot deal</span>
+                            <h3>백화점 상품 그대로</h3>
+                        </div>
+                        <ul class="content_list content_list_2">
+                            <li>
+                                <div class="content_image_wrap">
+                                    <img src="https://via.placeholder.com/130x90">
+                                    <span class="discount">50%</span>
+                                    <h3>부드럽게 감기는 말랑말랑 파우치 이불</h3>
+                                    <span class="price">
+                                        <em>21,900</em>원
+                                    </span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="content_image_wrap">
+                                    <img src="https://via.placeholder.com/130x90">
+                                    <span class="discount">50%</span>
+                                    <h3>부드럽게 감기는 말랑말랑 파우치 이불</h3>
+                                    <span class="price">
+                                        <em>21,900</em>원
+                                    </span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="list_half list_half_bottom shop_border">
+                        <div class="list_half_header list_half_bg">
+                            <div class="half_overlay">
+                                <h3 class="shop_title_border">백화점 상품 그대로</h3>
+                            </div>
+                        </div>
+                        <ul class="content_list content_list_3">
+                            <li>
+                                <img src="https://via.placeholder.com/102x100">
+                                <h3>생활공작소<br>과탄산소다</h3>
+                                <span>1.5kg x 4입</span>
+                            </li>
+                            <li>
+                                <img src="https://via.placeholder.com/102x100">
+                                <h3>생활공작소<br>과탄산소다</h3>
+                                <span>1.5kg x 4입</span>
+                            </li>
+                            <li>
+                                <img src="https://via.placeholder.com/102x100">
+                                <h3>생활공작소<br>과탄산소다</h3>
+                                <span>1.5kg x 4입</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="list_item">
+                    <div class="list_half list_half_top shop_border">
+                        <div class="list_half_header list_half_bg">
+                            <div class="half_overlay">
+                                <h3 class="shop_title_border">백화점 상품 그대로</h3>
+                            </div>
+                        </div>
+                        <ul class="content_list content_list_3">
+                            <li>
+                                <img src="https://via.placeholder.com/102x100">
+                                <h3>생활공작소<br>과탄산소다</h3>
+                                <span>1.5kg x 4입</span>
+                            </li>
+                            <li>
+                                <img src="https://via.placeholder.com/102x100">
+                                <h3>생활공작소<br>과탄산소다</h3>
+                                <span>1.5kg x 4입</span>
+                            </li>
+                            <li>
+                                <img src="https://via.placeholder.com/102x100">
+                                <h3>생활공작소<br>과탄산소다</h3>
+                                <span>1.5kg x 4입</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="list_half list_half_bottom shop_border">
+                        <div class="list_half_header">
+                            <span class="headline">hot deal</span>
+                            <h3>백화점 상품 그대로</h3>
+                        </div>
+                        <ul class="content_list content_list_2">
+                            <li>
+                                <div class="content_image_wrap">
+                                    <img src="https://via.placeholder.com/130x90">
+                                    <span class="discount">50%</span>
+                                    <h3>부드럽게 감기는 말랑말랑 파우치 이불</h3>
+                                    <span class="price">
+                                        <em>21,900</em>원
+                                    </span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="content_image_wrap">
+                                    <img src="https://via.placeholder.com/130x90">
+                                    <span class="discount">50%</span>
+                                    <h3>부드럽게 감기는 말랑말랑 파우치 이불</h3>
+                                    <span class="price">
+                                        <em>21,900</em>원
+                                    </span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </div>
+            <div class="brand_wrap shop_border">
+                <ul class="brand_list">
+                    <li><img src="https://via.placeholder.com/64x64"></li>
+                    <li><img src="https://via.placeholder.com/64x64"></li>
+                    <li><img src="https://via.placeholder.com/64x64"></li>
+                    <li><img src="https://via.placeholder.com/64x64"></li>
+                    <li><img src="https://via.placeholder.com/64x64"></li>
+                    <li><img src="https://via.placeholder.com/64x64"></li>
+                    <li><img src="https://via.placeholder.com/64x64"></li>
+                    <li><img src="https://via.placeholder.com/64x64"></li>
+                    <li><img src="https://via.placeholder.com/64x64"></li>
+                </ul>
+            </div>
     </main>
+    <!-- footer -->
+    <footer id="shop_footer">
+        <div class="shop_container">
+            <div class="policy_wrap">
+                <span>네이버 이용약관</span>
+                <span>네이버페이 이용약관</span>
+                <span><strong>개인정보처리방침</strong></span>
+                <span>법적고지 및 주의사항</span>
+                <span>입점안내</span>
+                <span>쇼핑윈도 노출안내</span>
+                <span>쇼핑파트너센터</span>
+                <span>스마트스토어센터</span>
+                <span>안전거래센터</span>
+                <span>쇼핑&페이 고객센터</span>
+            </div>
+            <p>네이버㈜는 통신판매중개자이며, 통신판매의 당사자가 아닙니다. 상품, 상품정보, 거래에 관한 의무와 책임은 판매자에게 있습니다.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
