--- a/07.19/naver/blog.html
+++ b/07.19/naver/blog.html
@@ -227,10 +227,91 @@
 					</ul>
 				</div>
 			</div> 
-			<div class="blog_main_right">
-				
-			</div>
-		</div>
-	</main>
+			<!-- main_right -->
+            <div class="blog_main_right">
+                <div id="blog_account">
+                    <p>네이버를 더 안전하고 편안하게 이용하세요.</p>
+                    <a href="#">로그인</a>
+                    <div class="account_sub_wrap">
+                        <div class="account_sub">
+                            <span>아이디</span>
+                            <span class="bar"></span>
+                            <span>비밀번호 찾기</span>
+                        </div>
+                        <span>회원가입</span>
+                    </div>
+                </div>
+                <div id="blog_banner">
+                </div>
+                <div id="blog_guide">
+                	<a href="#">
+                		<p>
+                			온라인 셀러를 위한<br>
+                			<span>블로그 마켓 가입</span>
+                		</p>
+                		<i></i>
+                	</a>
+                </div>
+                <div id="blog_guide">
+                	<a href="#">
+                		<p>
+                			꼭 한번 확인해야 할<br>
+                			<span>블로그 가이드</span>
+                		</p>
+                		<i></i>
+                	</a> 
+                </div>
+                <div id="blog_guide"> 
+                	<a href="#">
+                		<p>
+                			누구보다 발빠르게<br>
+                			<span>블로그 새소식</span>
+                		</p>
+                		<i></i>
+                	</a>
+                </div>
+                <div id="blog_notice">
+                	<div class="blog_notice_title_wrap">
+                		<a href="#"> 
+                			<h3>공지사항</h3>
+                			<i></i>
+                		</a> 
+                	</div>
+                	<ul class="blog_notice_list">
+                		<li><a href="#">[안내] 07.28일 모바일웹 스마트에디터3.0</a></li>
+                		<li><a href="#">[안내] PC 블로그 홈에서 쪽지보내기 기능이</a></li>
+                		<li><a href="#">[안내] 블로그 DB 점검 안내</a></li>
+                	</ul>
+                </div>
+                <div id="blog_helper">
+                	<ul class="blog_helper_list">
+                		<li><span class="blog_helper_icon icon1"></span><a href="#">블로그 앱 간편설치</a></li>
+                		<li><span class="blog_helper_icon icon2"></span><a href="#">개발 가이드</a></li>
+                		<li><span class="blog_helper_icon icon3"></span><a href="#">블로그 글 권리보호</a></li>
+                		<li><span class="blog_helper_icon icon4"></span><a href="#">블로그 스마트봇</a></li>
+                		<li><span class="blog_helper_icon icon5"></span><a href="#">블로그 고객센터</a></li>
+                		<li><span class="blog_helper_icon icon6"></span><a href="#">신고센터</a></li>
+                		<li><span class="blog_helper_icon icon7"></span><a href="#">해피빈 콩받기 안내</a></li>
+                	</ul>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- blog footer -->
+    <footer id="blog_footer">
+    	<div class="blog_container">
+    		<ul>
+    			<li><a href="#">이용약관</a></li>
+    			<li><a href="#">블로그 서비스 운영정책</a></li>
+    			<li><a href="#"><strong>개인정보처리방침</strong></a></li>
+    			<li><a href="#">책임의 한계와 법적고지</a></li>
+    			<li><a href="#">글 권리 보호하기</a></li>
+    			<li><a href="#">게시중단요청서비스</a></li>
+    		</ul> 
+    		<p><strong>NAVER</strong> Copyright © NAVER Corp. All Rights Reserved.</p>
+    	</div>
+    </footer>
 </body>
+
 </html>
